tests/compile_fail/borrow/parenthesized_associated_type.rs
#![allow(unused_parens)]

trait Trait {
    type Assoc;
}

#[derive(derive_more::Borrow)]
struct Foo<T: Trait>((T::Assoc));

fn main() {}
